syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";
option go_package = "github.com/ferza17/ecommerce-microservices-v2/user-service/model/pb";

message CreateUserEventStoreRequest {
  string id = 1;
  string saga_id = 2;
  string entity = 3;
  string entity_id = 4;
  string event_type = 5;
  string status = 6; // pending, completed, failed, rolled_back
  UserState  payload = 7;
  optional UserState previous_state = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

message UserState {
  optional string id = 1;
  optional string name = 2;
  optional string email = 3;
  optional string password = 4;
  optional google.protobuf.Timestamp created_at = 5;
  optional google.protobuf.Timestamp updated_at = 6;
  optional google.protobuf.Timestamp discarded_at = 7;
}

message CreateUserEventStoreResponse {
  string id = 1;
}
